--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,88 +22,17 @@
 
 <!-- Categories Start -->
 
-<!-- <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3 py-4">
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/american-food.jpg" alt="American Food" loading="lazy">
-
-    </div>
-    <div class="pt-1">American Food</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/indian.jpg" alt="Indian Food" loading="lazy">
-
-    </div>
-    <div class="pt-1">Thai Food</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/chocko.jpg" alt="Japnies Food" loading="lazy">
-
-    </div>
-    <div class="pt-1">Japnies Food</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/chhinees.jpg" alt="Chinese Food" loading="lazy">
-
-    </div>
-    <div class="pt-1"> Chinese Food</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/canada.jpg" alt="Canada Food" loading="lazy">
-
-    </div>
-    <div class="pt-1"> Canada Food</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/chocko.jpg" alt="Chocko Food" loading="lazy">
-
-    </div>
-    <div class="pt-1"> Chocko Food</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/food.jpg" alt=" Food" loading="lazy">
-
-    </div>
-    <div class="pt-1"> Food</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/juicy.jpg" alt="Juice" loading="lazy">
-
-    </div>
-    <div class="pt-1">Juicy</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/junk.jpg" alt="Junk Food" loading="lazy">
-
-    </div>
-    <div class="pt-1">Junk Food</div>
-  </a>
-  <a href="#" class="col text-ceter category__link">
-    <div class="category__imgshadow">
-      <img scr="img/pizza.jpg" alt="Pizza" loading="lazy">
-
-    </div>
-    <div class="pt-1">Pizza</div>
-  </a>
-
-</div> -->
-
-
 
 <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3 py-4">
+
+
   <% if(categories !='' ) { %>
     <% categories.forEach(function(category, index) { %>
       <a href="/categories/<%- category.name %>" class="col text-center category__link">
         <div class="category__img shadow">
-          <img src="img/<%- category.image %>" alt="<%- category.name %>" loading="lazy">
+          <img src="/uploads/<%- category.image %>" alt="<%- category.name %>" loading="lazy">
+
+
         </div>
         <div class="pt-1">
           <%- category.name %>
@@ -117,7 +46,8 @@
               <img src="sandwitch.jpg" alt="View All Categories" loading="lazy">
             </div>
             <div class="pt-1">View All</div>
-          </a> -->
+          </a>
+
 
 </div>
 <!-- Categories End -->
@@ -138,7 +68,7 @@
       <% food.latest.forEach(function(recipe, index){ %>
         <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
           <div class="category__img category__img--large shadow">
-            <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" loading="lazy">
+            <img src="/uploads/<%- category.image %>" alt="<%= recipe.name %>" loading="lazy">
           </div>
           <div class="pt-1">
             <%= recipe.name %>
@@ -165,7 +95,7 @@
       <% food.thai.forEach(function(recipe, index){ %>
         <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
           <div class="category__img category__img--large shadow">
-            <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" loading="lazy">
+            <img src="/uploads/<%- category.image %>" alt="<%= recipe.name %>" loading="lazy">
           </div>
           <div class="pt-1">
             <%= recipe.name %>
@@ -191,7 +121,7 @@
       <% food.american.forEach(function(recipe, index){ %>
         <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
           <div class="category__img category__img--large shadow">
-            <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" loading="lazy">
+            <img src="/uploads/<%- category.image %>" alt="<%= recipe.name %>" loading="lazy">
           </div>
           <div class="pt-1">
             <%= recipe.name %>
@@ -217,7 +147,7 @@
       <% food.chinese.forEach(function(recipe, index){ %>
         <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
           <div class="category__img category__img--large shadow">
-            <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" loading="lazy">
+            <img src="/uploads/<%- category.image %>" alt="<%= recipe.name %>" loading="lazy">
           </div>
           <div class="pt-1">
             <%= recipe.name %>
