--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -9,34 +9,35 @@
 </nav>
 
 <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3 mb-4">
-  <% if(typeof categories !=='undefined' && categories.length> 0) { %>
-    <% categories.forEach(function(category, index) { %>
-      <a href="/categories/<%- category.name %>" class="col text-center category__link">
-        <div class="category__img shadow">
-          <img src="/uploads/<%- category.image %>" alt="<%- category.name %>" loading="lazy">
-        </div>
-        <div class="pt-1">
-          <%- category.name %>
-        </div>
-      </a>
+  <!-- <% if(typeof categories !=='undefined' && categories.length> 0) { %>
+    <% categories.forEach(function(category, index) { %> -->
+  <a href="#" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/uploads/american-food.jpg" alt="<%- category.name %>" loading="lazy">
+    </div>
+    <div class="pt-1">American Food
+      <!-- <%- category.name %> -->
+    </div>
+  </a>
+  <!-- 
       <% }) %>
-        <% } %>
+        <% } %> -->
 </div>
 
 
 <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-  <% if(typeof categoryById !=='undefined' && categoryById.length> 0) { %>
-    <% categoryById.forEach(function(recipe, index){ %>
-      <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
-        <div class="category__img category__img--large shadow">
-          <img src="/uploads/<%= recipe.image %>" alt="<%= recipe.name %>" loading="lazy">
-        </div>
-        <div class="pt-1">
-          <%= recipe.name %>
-        </div>
-      </a>
-      <% }) %>
+  <!-- <% if(typeof categoryById !=='undefined' && categoryById.length> 0) { %>
+    <% categoryById.forEach(function(recipe, index){ %> -->
+  <a href="#" class="col text-center category__link">
+    <div class="category__img category__img--large shadow">
+      <img src="/uploads/american-food.jpg" alt="<%= recipe.name %>" loading="lazy">
+    </div>
+    <div class="pt-1">Chinese Food
+      <!-- <%= recipe.name %> -->
+    </div>
+  </a>
+  <!-- <% }) %>
         <% } else { %>
           <p>No items found.</p>
-          <% } %>
+          <% } %> -->
 </div>
