--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,28 +26,139 @@
 <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3 py-4">
 
 
-  <% if(categories !='' ) { %>
-    <% categories.forEach(function(category, index) { %>
-      <a href="/categories/<%- category.name %>" class="col text-center category__link">
-        <div class="category__img shadow">
-          <img src="/uploads/<%- category.image %>" alt="<%- category.name %>" loading="lazy">
+  <!-- <% if(categories !='' ) { %>
+    <% categories.forEach(function(category, index) { %> -->
+  <!-- <a href="#" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/chinese.jpg" alt="<%- category.name %>" loading="lazy">
+      <img src="img/spicy.jpg" alt="<%- category.name %>" loading="lazy">
+
+      <img src="img/chinese.jpg" alt="<%- category.name %>" loading="lazy">
+
+      <img src="img/chinese.jpg" alt="<%- category.name %>" loading="lazy">
 
 
-        </div>
-        <div class="pt-1">
-          <%- category.name %>
-        </div>
-      </a>
-      <% }) %>
-        <% } %>
 
-          <a href="/categories" class="col text-center category__link">
-            <div class="category__img shadow">
-              <img src="sandwitch.jpg" alt="View All Categories" loading="lazy">
-            </div>
-            <div class="pt-1">View All</div>
-          </a>
+    </div>
+    <div class="pt-1">
+       <%- category.name %> -->
+  <!-- </div> -->
+  <!-- </a>  -->
+  <!-- <% }) %>
+        <% } %> -->
 
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/american-food.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">American Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/chhineese.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Chinese Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/chocko.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">America Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/food.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Chandighar Food</div>
+  </a>
+
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/indian.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1"> Indian Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/japanies.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Japan Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/maxican.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">UK Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/publish-recipe.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Indian Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/sandwitch.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">USA Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="img/spicy.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">chinese</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/uploads/burger.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Burger</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/uploads/canada.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Canada</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/uploads/chocko.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Chocklate</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/uploads/food.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/uploads/juicy.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Juice</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/uploads/junk.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1"> Junk Food</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="/uploads/pizza.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1"> Pizza</div>
+  </a>
+  <a href="/categories" class="col text-center category__link">
+    <div class="category__img shadow">
+      <img src="uploads/indian.jpg" alt="View All Categories" loading="lazy">
+    </div>
+    <div class="pt-1">Indian Food</div>
+  </a>
+
+
+  <!-- q -->
 
 </div>
 <!-- Categories End -->
@@ -59,25 +170,38 @@
 <section class="pb-4 pt-4">
   <div class="d-flex mb-2 align-items-center">
     <h2>Latest Recipes</h2>
-    <a href="/explore-latest" class="ms-auto">View More</a>
+
+    <a href="/explore-latest" class="ms-auto">
+      <!-- <ul><a href="/categories" class="col text-center category__link">
+          <div class="category__img shadow">
+            <img src="img/spicy.jpg" alt="View All Categories" loading="lazy">
+          </div>
+          <div class="pt-1">Food</div>
+        </a><a href="/categories" class="col text-center category__link">
+          <div class="category__img shadow">
+            <img src="img/spicy.jpg" alt="View All Categories" loading="lazy">
+          </div>
+          <div class="pt-1">Food</div>
+        </a></ul> -->
+    </a>
   </div>
 
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
 
-    <% if(food !='' ) { %>
-      <% food.latest.forEach(function(recipe, index){ %>
-        <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
-          <div class="category__img category__img--large shadow">
-            <img src="/uploads/<%- category.image %>" alt="<%= recipe.name %>" loading="lazy">
-          </div>
-          <div class="pt-1">
-            <%= recipe.name %>
-          </div>
-        </a>
-        <% }) %>
-          <% } else { %>
-            <p>No items found.</p>
-            <% } %>
+    <!-- <% if(food !='' ) { %>
+      <% food.latest.forEach(function(recipe, index){ %> -->
+    <!-- <a href="#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="uploads/junk.jpg" alt="<%= recipe.name %>" loading="lazy">
+      </div>
+      <div class="pt-1">Latest Recipe
+         <%= recipe.name %> -->
+    <!-- </div>
+  </a>  -->
+    <!-- <% }) %>
+      <% } else { %> -->
+    <!-- <p>No items found.</p> -->
+    <!-- <% } %> -->
   </div>
 
 </section>
@@ -91,20 +215,20 @@
   </div>
 
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <% if(typeof food.thai !=='undefined' && food.thai.length> 0) { %>
-      <% food.thai.forEach(function(recipe, index){ %>
-        <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
-          <div class="category__img category__img--large shadow">
-            <img src="/uploads/<%- category.image %>" alt="<%= recipe.name %>" loading="lazy">
-          </div>
-          <div class="pt-1">
-            <%= recipe.name %>
-          </div>
-        </a>
-        <% }) %>
+    <!-- <% if(typeof food.thai !=='undefined' && food.thai.length> 0) { %>
+      <% food.thai.forEach(function(recipe, index){ %> -->
+    <a href="#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="/uploads/american-food.jpg" alt="<%= recipe.name %>" loading="lazy">
+      </div>
+      <div class="pt-1">Latest Food
+        <!-- <%= recipe.name %> -->
+      </div>
+    </a>
+    <!-- <% }) %>
           <% } else { %>
             <p>No items found.</p>
-            <% } %>
+            <% } %> -->
   </div>
 </section>
 <!-- Thai End -->
@@ -117,20 +241,20 @@
   </div>
 
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <% if(food.american !='' ) { %>
-      <% food.american.forEach(function(recipe, index){ %>
-        <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
-          <div class="category__img category__img--large shadow">
-            <img src="/uploads/<%- category.image %>" alt="<%= recipe.name %>" loading="lazy">
-          </div>
-          <div class="pt-1">
-            <%= recipe.name %>
-          </div>
-        </a>
-        <% }) %>
-          <% } else { %>
+    <!-- <% if(food.american !='' ) { %>
+      <% food.american.forEach(function(recipe, index){ %> -->
+    <a href="#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="/uploads/chinese.jpg" alt="<%= recipe.name %>" loading="lazy">
+      </div>
+      <div class="pt-1">American
+        <!-- <%= recipe.name %> -->
+      </div>
+    </a>
+    <!-- <% }) %> -->
+    <!-- <% } else { %>
             <p>No items found.</p>
-            <% } %>
+            <% } %> -->
   </div>
 </section>
 <!-- American End -->
@@ -143,20 +267,20 @@
   </div>
 
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-    <% if(food.chinese !='' ) { %>
-      <% food.chinese.forEach(function(recipe, index){ %>
-        <a href="/recipe/<%= recipe._id %>" class="col text-center category__link">
-          <div class="category__img category__img--large shadow">
-            <img src="/uploads/<%- category.image %>" alt="<%= recipe.name %>" loading="lazy">
-          </div>
-          <div class="pt-1">
-            <%= recipe.name %>
-          </div>
-        </a>
-        <% }) %>
+    <!-- <% if(food.chinese !='' ) { %>
+      <% food.chinese.forEach(function(recipe, index){ %> -->
+    <a href="#" class="col text-center category__link">
+      <div class="category__img category__img--large shadow">
+        <img src="/uploads/pizza.jpg" alt="<%= recipe.name %>" loading="lazy">
+      </div>
+      <div class="pt-1">
+        <!-- <%= recipe.name %> -->
+      </div>
+    </a>
+    <!-- <% }) %>
           <% } else { %>
             <p>No items found.</p>
-            <% } %>
+            <% } %> -->
   </div>
 </section>
 <!-- American End -->
